syntax = "proto3";
package chat_grpc;
import "validate/validate.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

service ChatService {
  rpc CreateChatRoom(CreateRoomReq) returns (Room);
  rpc AddMemberToChatRoom(AddMemberReq) returns (google.protobuf.BoolValue);
  rpc SendMessage(stream SendMessageReq) returns (Message);
  rpc ReceiveMessage(ReceiveMessageReq)returns (stream Message);
}

message Message {
  int64 id = 1;
  string body = 2;
  int64 room_id = 3;
  int64 user_id = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message Room {
  int64 id = 1;
  int64 post_id = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
}

message SendMessageReq {
  string body = 1;
  int64 room_id = 2 [(validate.rules).int64.gte = 1];
  int64 user_id = 3 [(validate.rules).int64.gte = 1];
}

message ReceiveMessageReq {
  int64 room_id = 1 [(validate.rules).int64.gte = 1];
  int64 user_id = 2 [(validate.rules).int64.gte = 1];
}

message AddMemberReq {
  int64 room_id = 1 [(validate.rules).int64.gte = 1];
  int64 user_id = 2 [(validate.rules).int64.gte = 1];
}

message CreateRoomReq {
  int64 post_id = 1 [(validate.rules).int64.gte = 1];
}